Fixed Center Align CSS

--- a/style.css
+++ b/style.css
@@ -6,6 +6,13 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #006400;
+}
+
+.spinner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 100vh;
   width: 100vw;
   background-color: #006400;
